[project]
name = "agenticcybersense"
version = "0.1.0"
description = "Agentic Cyber Defense"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.2.0",
    "langchain-mcp-adapters>=0.2.1",
    "langchain-ollama>=1.0.1",
    "langgraph>=1.0.5",
    "numpy>=2.3.5",
    "ollama>=0.6.1",
    "streamlit>=1.52.1",
    "torch>=2.9.1",
    "watchdog>=6.0.0",
]

[build-system]
requires = ["uv_build>=0.7.3"]
build-backend = "uv_build"

[tool.ruff]
line-length=160

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"] 
