[project]
name = "agenticcybersense"
version = "0.1.0"
description = "Agentic Cyber Defense"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "chromadb>=1.4.1",
    "langchain>=1.2.0",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-huggingface>=1.2.0",
    "langchain-mcp-adapters>=0.2.1",
    "langchain-ollama>=1.0.1",
    "langchain-text-splitters>=1.1.0",
    "langgraph>=1.0.5",
    "numpy>=2.3.5",
    "ollama>=0.6.1",
    "pypdf>=6.6.2",
    "sentence-transformers>=5.2.2",
    "streamlit>=1.52.1",
    # Exclude torch on macOS Intel (x86_64) by default to avoid missing wheel resolver errors
    "torch>=2.9.1 ; sys_platform != \"darwin\" or platform_machine != \"x86_64\"",
    "watchdog>=6.0.0",
]

[project.optional-dependencies]
ml = [
  # Only install torch automatically on platforms with compatible wheels.
  "torch>=2.9.1 ; sys_platform != \"darwin\" or platform_machine != \"x86_64\"",
]

[tool.uv]
# Help the resolver know about macOS x86_64 (Intel) platform when needed
required-environments = [
  "sys_platform == 'darwin' and platform_machine == 'x86_64'",
]

[dependency-groups]
dev = [
  "ruff>=0.9",
  "mypy>=1.10",
  "pytest>=8.0",
  "pre-commit>=3.7",
]

[build-system]
requires = ["uv_build>=0.7.3"]
build-backend = "uv_build"

[tool.ruff]
line-length=160

[tool.ruff.lint]
extend-select = ["ALL",]
ignore = ["D404", "S101"]
fixable = ["ALL",]
